fix: sonar bugs